fixed aside overflowing in mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,6 +48,10 @@ body {
     overflow: hidden;
 }
 
+#root {
+    overflow: hidden;
+}
+
 // prettier-ignore
 button, input {
     font: inherit;
